Fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ button {
 /* Membership plans  */
 .membership {
     height: 43rem;
-    margin: 0 5% 0 5%;
 }
 
 .membership h2 {
